test: 정렬 가능한 리스트로 변경
List.of 의 경우 정렬이 불가능해서 변경했습니다.